[package]
name = "hello-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Coconut <1424392205@qq.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/mocha-opts/hello-wasm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"



